create main static components

--- a/src/styles/base/_reboot.scss
+++ b/src/styles/base/_reboot.scss
@@ -4,6 +4,10 @@ html {
   font-size: var(--typography-htmlFontSize);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 b,
 strong {
   font-weight: var(--typography-fontWeightBold);
@@ -33,8 +37,10 @@ body {
 
 .App {
   height: 100%;
+  background-color: #4b4b4b;
 }
 
 button {
   cursor: pointer;
+  color: var(--palette-primary-text);
 }
